# c4_rust_Al_Jazirah_Al_Hamra

./: Cargo.toml  README.md  c4.c  test.c
Tests/: lexer.rs  parser.rs  parsing.rs  vm.rs
src/: VM.rs  c4.rs  filesystem.rs  lexer.rs  lib.rs  parser.rs
